[metadata]
name = mpdcast-dab
version = attr: debhello.__version__
description = MpdCast DAB
long_description = file: README.md
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: End Users/Desktop
        Topic :: Multimedia :: Sound/Audio
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Programming Language :: Python
        Programming Language :: Python :: 3
author = Lamarqe
author_email = scritch@gmx.de
maintainer = Lamarqe
maintainer_email = scritch@gmx.de
url = https://github.com/Lamarqe/mpdcast-dab
project_urls =
        Documentation = https://github.com/Lamarqe/mpdcast-dab
keywords = mpdcast-dab
license = GPLv3+

[options]
package_dir =
        = src
packages = find:
python_requires = >=3.11
setup_requires = setuptools >= 42

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        hello = cast_sender.__main__:main
